--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div class="col-md-6">
       <h2>Drive</h2>
       <p>Armazene seus arquivos na nuvem com segurança e praticidade. Com o Drive da CubieCloud, você tem espaço de armazenamento para guardar seus documentos, fotos, vídeos e muito mais.</p>
-      <a href="httpa://drive.cubiecloud.ml/"><button class="btn btn-gradient">Crie sua conta</button></a>
+      <a href="https://drive.cubiecloud.ml/"><button class="btn btn-gradient">Crie sua conta</button></a>
     </div>
   </div>
 
