--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="container py-5">
   <h1>Bem-vindo à CubieCloud</h1>
   <p>Oferecemos soluções em nuvem para diversas necessidades, desde hospedagem de sites até servidores dedicados. Nossos serviços são seguros, confiáveis e acessíveis.</p>
-  <button class="btn btn-gradient">Saiba mais</button>
+  <a href="https://plus.cubiecloud.ml"><button class="btn btn-gradient">Saiba mais</button></a>
 
   <hr>
 
