--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header class="header">
-    <i><img src="https://cubiecloud.ml/assets/cubie.png" width="128" height="128"></i>
+    <i><img src="content.cubie.com.br/7mD3vQ/63a37d7c4aa0b.png" width="128" height="128"></i>
     <h1>CubieCloud</h1>
   </header>
 
@@ -68,7 +68,7 @@
         <div class="col-md-4 mb-5">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title"><i class="fas fa-code-branch mr-2"></i>MbCL</h5>
+              <h5 class="card-title"><i class="fas fa-code-branch mr-2"></i>MbCL (Descontinuado)</h5>
               <p class="card-text">Repositório online que contém diversas bibliotecas e ferramentas para desenvolvimento de software. O projeto é mantido pela CubieCloud.</p>
               <a href="https://mbcl.ml/#by-cubiecloud" class="btn btn-primary">Acessar</a>
             </div>
@@ -79,14 +79,14 @@
             <div class="card-body">
               <h5 class="card-title"><i class="fas fa-cloud mr-2"></i>IECloud</h5>
               <p class="card-text">Sistema de hospedagem CDN gratuita desenvolvido pela CubieCloud.</p>
-              <a href="https://ie.c2app.ml" class="btn btn-primary">Acessar</a>
+              <a href="https://ie.cubie.com.br" class="btn btn-primary">Acessar</a>
             </div>
           </div>
         </div>
         <div class="col-md-4 mb-5">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title"><i class="fas fa-file-upload mr-2"></i>IEFW</h5>
+              <h5 class="card-title"><i class="fas fa-file-upload mr-2"></i>IEFW (Descontinuado)</h5>
               <p class="card-text">Framework de upload para IECloud, também desenvolvido pela equipe da CubieCloud.</p>
               <a href="https://npmjs.org/iefw" class="btn btn-primary">Acessar</a>
             </div>
