--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
       padding: 25px 0;
       color: #fff;
     }
+    .m {
+      background-color: red;
+      color: white;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
+  <header class="m">
+   🎉 <b>Promoção:</b> Peça ja seu bot do Discord via <a href="mailto: suporte@cubie.com.br">email</a> ou <b>@gslks</b> no Discord.
+  </header>
   <header class="header">
-    <i><img src="content.cubie.com.br/7mD3vQ/63a37d7c4aa0b.png" width="128" height="128"></i>
+    <i><img src="https://content.cubie.com.br/7mD3vQ/63a37d7c4aa0b.png" width="128" height="128"></i>
     <h1>CubieCloud</h1>
   </header>
 
