--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <header class="m">
-   🎉 <b>Promoção:</b> Peça ja seu bot do Discord via <a href="mailto: suporte@cubie.com.br">email</a> ou <b>@gslks</b> no Discord.
+   A <b>CubieCloud</b> está de volta trazendo novas novidades, fique preparado (a) paras mudanças
   </header>
   <header class="header">
     <i><img src="https://content.cubie.com.br/7mD3vQ/63a37d7c4aa0b.png" width="128" height="128"></i>
